--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-image: url(images/BMI.jpeg);
+  background-image: url(/images/BMI.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #f0f0f0;
