--- a/templates/bmi_app.html
+++ b/templates/bmi_app.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>BMI Calculator</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="app.js" defer="false"></script>
+  <link rel="stylesheet" href="static/style.css">
+  <script src="static/app.js" defer="false"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
