--- a/templates/bmi_app.html
+++ b/templates/bmi_app.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title>BMI Calculator</title>
-  <link rel="stylesheet" href="static/style.css">
-  <script src="static/app.js" defer="false"></script>
+  <link rel="stylesheet" href="static/css/style.css">
+  <script src="static/js/app.js" defer="false"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+  <img src="{{ url_for('static', filename='images/BMI.jpeg') }}">
   <div class="container">
     <h1>BMI Calculator</h1>
     <label for="weight">Weight (kg):</label>
